--- a/requirements2.txt
+++ b/requirements2.txt
@@ -1,5 +1,5 @@
 setuptools==39.1.0
-Pillow>=1.0
+Pillow==8.0.1
 pyopenssl==19.1.0
 werkzeug==1.0.1
 six==1.10.0
@@ -12,7 +12,6 @@ google-cloud-vision==2.0.0
 cryptography==3.2.1
 boto3==1.16.9
 boto==2.49.0
-numpy
 opencv-python==4.4.0.44
 googletrans==3.0.0
 PyMySQL==0.10.1
