--- a/requirements2.txt
+++ b/requirements2.txt
@@ -1,39 +1,40 @@
 setuptools==39.1.0
-Pillow==8.0.1
-pyopenssl==19.1.0
-werkzeug==1.0.1
-six==1.10.0
-Flask==1.1.2
-Flask-Login==0.5.0
-Flask-SSLify==0.1.5
-nexmo==2.5.2
-paramiko==2.7.2
-google-cloud-vision==2.0.0
-cryptography==3.2.1
-boto3==1.16.9
-boto==2.49.0
-opencv-python==4.4.0.44
-googletrans==3.0.0
-PyMySQL==0.10.1
-imutils==0.5.3
-psycopg2-binary==2.8.6
-scikit-image==0.17.2
-apscheduler==3.6.3
-chainer==7.7.0
-pandas==1.1.4
-moviepy==1.0.3
+Pillow>=1.0
+pyopenssl
+Flask
+Flask-Login
+Flask-SSLify
+nexmo
+paramiko
+google-cloud-vision
+cryptography
+boto3
+boto
+opencv-python
+googletrans
+PyMySQL
+imutils
+psycopg2-binary
+scikit-image
+apscheduler
+werkzeug
+chainer
+pandas
+moviepy
 lxml==4.5.1
-google==3.0.0
-protobuf==3.13.0
-gputil==1.4.0
+google
+protobuf
+gputil
 tensorflow==1.14.0
 Markdown==3.1
 MarkupSafe==1.1.1
+docutils==0.14
+filelock==3.0.10
 matplotlib==3.0.3
-requests==2.21.0
+requests==2.22.0
 wheel==0.33.1
-astor==0.8.1
+astor
 imageio==2.5
-colormath==3.0.0
-scikit-learn==0.23.2
-gunicorn==20.0.4
+colormath
+sklearn
+gunicorn
