--- a/requirements2.txt
+++ b/requirements2.txt
@@ -1,24 +1,16 @@
 setuptools==39.1.0
-Pillow>=1.0
-pyopenssl
+Pillow==8.0.1
 Flask
 Flask-Login
 Flask-SSLify
-paramiko
-google-cloud-vision
-cryptography
 boto3
-boto
 opencv-python
-googletrans
-PyMySQL
 imutils
 psycopg2-binary
 scikit-image
+scikit-learn
 werkzeug
-chainer
 pandas
-moviepy
 lxml==4.5.1
 google
 protobuf
@@ -26,13 +18,10 @@ gputil
 tensorflow==1.14.0
 Markdown==3.1
 MarkupSafe==1.1.1
-docutils==0.14
-filelock==3.0.10
 matplotlib==3.0.3
 requests==2.22.0
 wheel==0.33.1
 astor
 imageio==2.5
 colormath
-sklearn
-gunicorn
+gunicorn==20.0.4
